WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175098
REGRESSION (
r207155
): Unable to switch sheets when previewing Numbers '09 spreadsheets
https://bugs.webkit.org/show_bug.cgi?id=175098
Summary
REGRESSION (r207155): Unable to switch sheets when previewing Numbers '09 spr...
Andy Estes
Reported
2017-08-02 15:52:47 PDT
REGRESSION (
r207155
): Unable to switch sheets when previewing Numbers '09 spreadsheets
Attachments
Patch
(1.49 MB, patch)
2017-08-02 16:10 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(1.49 MB, patch)
2017-08-02 16:39 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2017-08-02 15:54:05 PDT
rdar://problem/31416763
Andy Estes
Comment 2
2017-08-02 16:10:47 PDT
Created
attachment 317024
[details]
Patch
Daniel Bates
Comment 3
2017-08-02 16:31:46 PDT
Comment on
attachment 317024
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=317024&action=review
> Source/WebCore/ChangeLog:17 > + sandbox will be able to navigate eachother, but will not be able to navigate the top frame
eachother => each other
Andy Estes
Comment 4
2017-08-02 16:39:05 PDT
Created
attachment 317029
[details]
Patch
WebKit Commit Bot
Comment 5
2017-08-02 17:46:54 PDT
Comment on
attachment 317029
[details]
Patch Clearing flags on attachment: 317029 Committed
r220163
: <
http://trac.webkit.org/changeset/220163
>
WebKit Commit Bot
Comment 6
2017-08-02 17:46:55 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 7
2017-08-03 21:37:28 PDT
Comment on
attachment 317024
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=317024&action=review
> Source/WebCore/dom/SecurityContext.h:101 > + // It's only appropriate to call this during security context initialization; it's needed for > + // flags that can't be disabled with allow-* attributes, such as SandboxNavigation. > + void disableSandboxFlags(SandboxFlags mask) { m_sandboxFlags &= ~mask; }
Would be nice to define what "during initialization" means; I’m unclear when that ends.
Andy Estes
Comment 8
2017-08-09 09:59:55 PDT
(In reply to Darin Adler from
comment #7
)
> Comment on
attachment 317024
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=317024&action=review
> > > Source/WebCore/dom/SecurityContext.h:101 > > + // It's only appropriate to call this during security context initialization; it's needed for > > + // flags that can't be disabled with allow-* attributes, such as SandboxNavigation. > > + void disableSandboxFlags(SandboxFlags mask) { m_sandboxFlags &= ~mask; } > > Would be nice to define what "during initialization" means; I’m unclear when > that ends.
I meant during construction of a subclass of SecurityContext. My concern was that enabling some flags have side effects that can't easily be undone after the SecurityContext is created; e.g. enabling SandboxOrigin changes the security origin policy.
Darin Adler
Comment 9
2017-08-14 09:14:49 PDT
(In reply to Andy Estes from
comment #8
)
> (In reply to Darin Adler from
comment #7
) > > > Source/WebCore/dom/SecurityContext.h:101 > > > + // It's only appropriate to call this during security context initialization; it's needed for > > > + // flags that can't be disabled with allow-* attributes, such as SandboxNavigation. > > > + void disableSandboxFlags(SandboxFlags mask) { m_sandboxFlags &= ~mask; } > > > > Would be nice to define what "during initialization" means; I’m unclear when > > that ends. > > I meant during construction of a subclass of SecurityContext.
OK, that makes total sense to me. I think we should tighten up the terminology in the comment.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug